--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -155,6 +155,10 @@ ul
   width: 100%
   text-align: center
 
+.app-missing-warning
+  padding: 6px 8px
+  color: #900
+
 #filterTooltip
   position: fixed
   z-index: 50
