--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -661,6 +661,10 @@ details
     white-space: pre-wrap
   form[name=sendMsgForm]
     margin-bottom: 3px
+  &.big
+    width: 100%
+  &:hover
+    background-color: #0f0f0f
 
 .dbg
   position: fixed
