--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box; }
+  *:focus {
+    outline: none; }
 
 @font-face {
   font-family: "Eurostile";
@@ -618,12 +620,11 @@ img.c-icon:hover {
   -moz-transition: all 0.5s !important;
   -o-transition: all 0.5s !important;
   transition: all 0.5s !important; }
-
-#status-proxy.ng-hide {
-  display: block !important;
-  pointer-events: none;
-  opacity: 0;
-  height: 0; }
+  #status-proxy.ng-hide {
+    display: block !important;
+    pointer-events: none;
+    opacity: 0;
+    height: 0; }
 
 #status-tooltips {
   position: absolute;
@@ -636,7 +637,9 @@ img.c-icon:hover {
 
 #status-network {
   position: absolute;
-  right: 0; }
+  right: 0;
+  bottom: 0;
+  padding: 8px; }
 
 .contact-actions {
   display: none; }
