persistent filters, moved into ui.js

--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -51,15 +51,17 @@ ul {
   -moz-transition: all 0.23s !important;
   -o-transition: all 0.23s !important;
   transition: all 0.23s !important; }
-
-.btn:hover, .btn:focus {
-  border-color: #999999;
-  box-shadow: 0 1px 3px #aaaaaa;
-  outline: none; }
-
-.btn:active {
-  box-shadow: 0 1px 3px #aaaaaa inset;
-  color: #777777; }
+  .btn:hover, .btn:focus {
+    border-color: #999999;
+    box-shadow: 0 1px 3px #aaaaaa;
+    outline: none; }
+  .btn:active {
+    box-shadow: 0 1px 3px #aaaaaa inset;
+    color: #777777; }
+  .btn:disabled {
+    color: #999999;
+    border-color: #cccccc;
+    box-shadow: 0 1px 4px #aaaaaa inset; }
 
 .btn-request {
   position: absolute;
@@ -108,12 +110,13 @@ ul {
   -o-transition: all 0.23s !important;
   transition: all 0.23s !important; }
   #options-btn:active, #options-btn:focus {
-    opacity: 0.9; }
+    opacity: 0.4; }
   #options-btn:hover {
     opacity: 0.3; }
 
 #options-btn-tip {
   position: fixed;
+  z-index: 500;
   top: 20px;
   right: 2px;
   background-color: black;
@@ -527,8 +530,9 @@ img.c-icon {
   border: 1px none black;
   outline: none;
   padding: 4px;
-  width: 40px;
-  height: 40px;
+  margin: 8px;
+  width: 30px;
+  height: 30px;
   text-decoration: none;
   opacity: 0.6;
   cursor: pointer;
