--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -61,7 +61,7 @@ ul {
   .btn:disabled {
     color: #999999;
     border-color: #cccccc;
-    box-shadow: 0 1px 4px #aaaaaa inset; }
+    box-shadow: 0 1px 2px #bbbbbb inset; }
 
 .btn-request {
   position: absolute;
@@ -201,9 +201,8 @@ ul {
 .network-btn {
   display: inline-block;
   margin: 8px; }
-
-.network-btn .btn {
-  font-size: 24px; }
+  .network-btn .btn {
+    font-size: 24px; }
 
 .uproxy-banner {
   font-size: 32px;
@@ -457,16 +456,16 @@ img.contact-image {
 .c-icons {
   position: absolute;
   right: 12px;
-  color: #222222;
+  color: #555555;
   font-size: 12.8px;
   font-weight: 900; }
 
 .c-icon {
+  display: inline-block;
   padding: 1px;
   width: 18px;
   height: 16px;
   line-height: 16px;
-  display: inline-block;
   text-align: center;
   vertical-align: middle;
   background: transparent no-repeat center;
