--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -409,7 +409,7 @@ ul
 .contacts li
   position: relative
   z-index: 0
-  min-height: 16px
+  height: 30px
   cursor: default
   padding: 6px 37px
   white-space: nowrap
