--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -91,40 +91,6 @@ ul {
   white-space: nowrap;
   font-size: 19.2px; }
 
-#options-btn {
-  position: fixed;
-  z-index: 400;
-  top: 4px;
-  right: 8px;
-  background: transparent url("../icons/settings.svg") no-repeat center center;
-  border: none;
-  outline: none;
-  padding: 4px;
-  width: 20px;
-  height: 20px;
-  text-decoration: none;
-  opacity: 0.6;
-  cursor: pointer;
-  -webkit-transition: all 0.23s !important;
-  -moz-transition: all 0.23s !important;
-  -o-transition: all 0.23s !important;
-  transition: all 0.23s !important; }
-  #options-btn:active, #options-btn:focus {
-    opacity: 0.4; }
-  #options-btn:hover {
-    opacity: 0.3; }
-
-#options-btn-tip {
-  position: fixed;
-  z-index: 500;
-  top: 20px;
-  right: 2px;
-  background-color: black;
-  color: #cccccc;
-  opacity: 0.85; }
-  #options-btn-tip.ng-hide {
-    opacity: 0; }
-
 .tip {
   display: inline-block;
   margin: 0;
@@ -237,17 +203,37 @@ ul {
 #networks-box {
   margin-top: 30px; }
 
-#search-section {
+#roster-header {
   position: relative;
   z-index: 50; }
 
-#search-contacts {
+#actions {
+  display: block;
   position: relative;
   z-index: 30;
+  width: 100%;
+  background-color: #fafafa;
+  height: 30px;
+  text-align: left;
+  overflow: hidden;
+  padding: 0;
+  box-shadow: 0 1px 2px #aaaaaa;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+  #actions:hover {
+    box-shadow: 0 1px 6px #aaaaaa; }
+
+#search-contacts {
+  display: block;
+  position: relative;
+  z-index: 20;
   width: 370px;
+  height: 34px;
   margin: 0;
   padding: 8px 20px;
-  border: 1px solid #aaaaaa;
+  border: 1px solid #bbbbbb;
   outline: none;
   color: #333333;
   -webkit-transition: all 0.23s !important;
@@ -262,22 +248,12 @@ ul {
   #search-contacts.ng-hide {
     display: block !important;
     pointer-events: none;
-    height: 0;
-    padding: 0;
-    border: none; }
-
-#actions {
-  z-index: 20;
-  display: block;
-  width: 100%;
-  background-color: #fafafa;
-  height: 30px;
-  text-align: left;
-  overflow: hidden;
-  padding: 0;
-  box-shadow: 0 1px 2px #aaaaaa; }
+    margin-top: -34px;
+    z-index: -1;
+    opacity: 0; }
 
 #search-btn {
+  position: relative;
   z-index: 40;
   width: 50px;
   height: 16px;
@@ -285,7 +261,11 @@ ul {
   border: none;
   background: transparent url("../icons/search.png") no-repeat center;
   background-size: 16px;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
   #search-btn:hover, #search-btn:focus {
     opacity: 0.5;
     outline: none; }
@@ -350,6 +330,40 @@ ul {
     opacity: 0.8; }
   .icon-btn:hover {
     opacity: 0.7; }
+
+#options-btn {
+  position: fixed;
+  z-index: 400;
+  top: 4px;
+  right: 8px;
+  background: transparent url("../icons/settings.svg") no-repeat center center;
+  border: none;
+  outline: none;
+  padding: 4px;
+  width: 20px;
+  height: 20px;
+  text-decoration: none;
+  opacity: 0.6;
+  cursor: pointer;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+  #options-btn:active, #options-btn:focus {
+    opacity: 0.4; }
+  #options-btn:hover {
+    opacity: 0.3; }
+
+#options-btn-tip {
+  position: fixed;
+  z-index: 500;
+  top: 30px;
+  right: 2px;
+  background-color: black;
+  color: #cccccc;
+  opacity: 0.85; }
+  #options-btn-tip.ng-hide {
+    opacity: 0; }
 
 #start-btn {
   background-image: url("../icons/uproxy-19.png"); }
