--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -102,6 +102,7 @@ ul
 
 #contact-header
   position: fixed
+  z-index: 500
   top: 0
   & h1
     position: fixed
@@ -516,34 +517,58 @@ img.c-icon
   &:hover
     opacity: 0.5
 
-#contact-details
+// ------------------------------ Access View ----------------------------------
+// This is the view which slides in from the right, when you click on a
+// roster entry.
+#access
   display: inline-block
   position: fixed
   width: 100%
-  top: 40px
+  height: 100%
+  padding-top: 40px
+  top: 0
   left: 0
   @include smooth
+  &.ng-hide
+    display: inline-block !important
+    opacity: 0
+    left: 400px
+  & img.contact-image
+    position: relative
+    width: 110px
+    height: 110px
+    border-color: #ddd
+    background-size: contain
+    box-shadow: 2px 3px 7px #bbb
 
-#contact-details.ng-hide
-  display: inline-block !important
-  opacity: 0
-  left: 400px
+.bg-deco
+  position: fixed
+  top: 0
+  width: 100%
+  height: 100%
+  background: transparent no-repeat center
+  pointer-events: none
+  opacity: 0.2
+  &#internets
+    background-image: url('../icons/global_internet.png')
+    background-size: 180px
+  &#path-left
+    background-image: url('../icons/path-left.png')
+    opacity: 0.02
+  &#path-right
+    background-image: url('../icons/path-right.png')
+    opacity: 0.02
 
-.contact-status
+.contact-info
   text-align: center
   text-shadow: 0px 1px 1px #ccc
+  width: 100%
+  &#my-info
+    position: absolute
+    bottom: 50px
 
 .contact-name
   text-align: center
-
-#contact-details img.contact-image
-  position: relative
-  width: 120px
-  height: 120px
-  margin: 8px
-  border-color: #ddd
-  background-size: contain
-  box-shadow: 2px 3px 7px #bbb
 
 .detail-panel
   position: fixed
@@ -564,6 +589,7 @@ img.c-icon
   outline: none
   text-decoration: none
   cursor: pointer
+  font-size: $fontSize * 0.5
   opacity: 0.9
   @include smooth
   &:active, &:focus
@@ -586,9 +612,8 @@ img.c-icon
   position: absolute
   display: inline-block
   background: no-repeat center
-  height: 115px
-  width: 185px
-  margin: 8px
+  height: 100px
+  width: 148px
   & .uproxytip
     position: absolute
     width: 100%
@@ -596,30 +621,36 @@ img.c-icon
     color: #888
   &.proxy
     left: 0
+    top: 150px
     background-image: url('../icons/arrow-up.png')
     background-position-y: top
     & .uproxytip
       bottom: 0
   &.client
+    right: 0
     background-image: url('../icons/arrow-down.png')
     background-position-y: bottom
+    width: 158px
     & .uproxytip
       top: 0
     &.active
       background-image: url('../icons/arrow-down-animate.gif')
     & .btn
-      margin-top: 63px
+      margin-top: 47px
 
 .instance-actions
   text-align: center
   font-size: $fontSize * 0.8
-
-.instance-actions .btn
-  padding: 8px 16px
-  margin-top: 16px
-  text-shadow: 0 1px 1px #888
-  border-radius: 3px
-  opacity: 0.9
+  position: absolute
+  top: 130px
+  width: 100%
+  & .btn
+    padding: 8px 16px
+    margin-top: 16px
+    text-shadow: 0 1px 1px #888
+    border-radius: 3px
+    font-size: $fontSize * 0.8
+    opacity: 0.9
 
 .client-details
   position: relative
