--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -633,7 +633,8 @@ img.c-icon {
   display: inline-block;
   background: no-repeat center;
   height: 100px;
-  width: 148px; }
+  width: 148px;
+  white-space: nowrap; }
   .uproxy-box .uproxytip {
     position: absolute;
     width: 100%;
@@ -643,7 +644,8 @@ img.c-icon {
     left: 0;
     top: 150px;
     background-image: url("../icons/arrow-up.png");
-    background-position-y: top; }
+    background-position-y: top;
+    padding-top: 12px; }
     .uproxy-box.proxy .uproxytip {
       bottom: 0; }
   .uproxy-box.client {
@@ -665,11 +667,11 @@ img.c-icon {
   top: 130px;
   width: 100%; }
   .instance-actions .btn {
-    padding: 8px 16px;
+    padding: 6px 12px;
     margin-top: 16px;
     text-shadow: 0 1px 1px #888888;
     border-radius: 3px;
-    font-size: 12.8px;
+    font-size: 11px;
     opacity: 0.9; }
 
 .client-details {
@@ -813,6 +815,10 @@ details > *:not(summary) {
 .dbg {
   position: fixed;
   z-index: 500; }
+
+#reset-box {
+  position: fixed;
+  bottom: 0; }
 
 details.advanced {
   margin-top: 15px; }
