access arrows opacity reflect trust

--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -83,8 +83,11 @@ ul {
 
 #contact-header {
   position: fixed;
-  z-index: 500;
-  top: 0; }
+  z-index: 300;
+  width: 100%;
+  top: 0;
+  padding-bottom: 4px;
+  box-shadow: 0 1px 3px #eeeeee; }
   #contact-header h1 {
     position: fixed;
     width: 100%;
@@ -344,7 +347,7 @@ ul {
 
 #options-btn {
   position: fixed;
-  z-index: 400;
+  z-index: 600;
   top: 4px;
   right: 8px;
   background: transparent url("../icons/settings.svg") no-repeat center center;
@@ -407,7 +410,7 @@ ul {
   top: 100px;
   width: 100%;
   padding: 10%;
-  z-index: 500;
+  z-index: 1;
   color: #444444;
   text-shadow: 0 2px 2px #cccccc;
   pointer-events: none; }
@@ -552,13 +555,6 @@ img.c-icon {
     display: inline-block !important;
     opacity: 0;
     left: 400px; }
-  #access img.contact-image {
-    position: relative;
-    width: 110px;
-    height: 110px;
-    border-color: #dddddd;
-    background-size: contain;
-    box-shadow: 2px 3px 7px #bbbbbb; }
 
 .bg-deco {
   position: fixed;
@@ -567,24 +563,55 @@ img.c-icon {
   height: 100%;
   background: transparent no-repeat center;
   pointer-events: none;
-  opacity: 0.2; }
+  opacity: 0.2;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+  .bg-deco.faded {
+    opacity: 0.02 !important; }
+  .bg-deco.darker {
+    opacity: 0.25 !important; }
+  .bg-deco.active {
+    opacity: 0.5 !important; }
   .bg-deco#internets {
     background-image: url("../icons/global_internet.png");
-    background-size: 180px; }
+    background-size: 180px;
+    -webkit-transition: all 0.5s !important;
+    -moz-transition: all 0.5s !important;
+    -o-transition: all 0.5s !important;
+    transition: all 0.5s !important; }
+    .bg-deco#internets.active {
+      opacity: 1 !important; }
   .bg-deco#path-left {
     background-image: url("../icons/path-left.png");
-    opacity: 0.02; }
+    opacity: 0.07; }
   .bg-deco#path-right {
     background-image: url("../icons/path-right.png");
-    opacity: 0.02; }
+    opacity: 0.07; }
 
 .contact-info {
   text-align: center;
   text-shadow: 0px 1px 1px #cccccc;
   width: 100%; }
   .contact-info#my-info {
-    position: absolute;
-    bottom: 50px; }
+    position: fixed;
+    bottom: 50px;
+    -webkit-transition: all 0.23s !important;
+    -moz-transition: all 0.23s !important;
+    -o-transition: all 0.23s !important;
+    transition: all 0.23s !important; }
+    .contact-info#my-info.ng-hide {
+      display: block !important;
+      pointer-events: none;
+      bottom: -100px; }
+  .contact-info img.contact-image {
+    position: relative;
+    width: 110px;
+    height: 110px;
+    border-color: #dddddd;
+    background-size: contain;
+    box-shadow: 2px 3px 7px #bbbbbb; }
 
 .contact-name {
   text-align: center; }
@@ -633,13 +660,16 @@ img.c-icon {
   display: inline-block;
   background: no-repeat center;
   height: 100px;
-  width: 148px;
-  white-space: nowrap; }
+  width: 148px; }
   .uproxy-box .uproxytip {
     position: absolute;
     width: 100%;
     text-align: center;
-    color: #888888; }
+    color: #888888;
+    padding: 0 8px;
+    background-color: white;
+    opacity: 0.7;
+    cursor: default; }
   .uproxy-box.proxy {
     left: 0;
     top: 150px;
@@ -664,7 +694,7 @@ img.c-icon {
   text-align: center;
   font-size: 12.8px;
   position: absolute;
-  top: 130px;
+  top: 165px;
   width: 100%; }
   .instance-actions .btn {
     padding: 6px 12px;
@@ -673,6 +703,13 @@ img.c-icon {
     border-radius: 3px;
     font-size: 11px;
     opacity: 0.9; }
+    .instance-actions .btn.black {
+      background-color: #222222;
+      color: #cccccc;
+      border-color: #666666; }
+      .instance-actions .btn.black:hover, .instance-actions .btn.black:focus {
+        color: white;
+        background-color: #444444; }
 
 .client-details {
   position: relative;
@@ -758,17 +795,11 @@ img.c-icon {
   bottom: 0;
   padding: 8px; }
 
-.contact-actions {
-  display: none; }
-
 #popup {
   width: 370.8204px;
   height: 600px; }
   #popup .footer {
     text-align: right; }
-
-.large-font {
-  font-size: 24px; }
 
 details > summary {
   cursor: pointer; }
